Add robocode control and simple qlearning test